完成商城模块和admin模块